# ChessGame_Auto

./: README.md  chess_model_server.py
chess_robot_ai/: package.xml  setup.cfg  setup.py
chess_robot_ai/chess_robot_ai/: chess_robot_node.py  chess_robot_node_UR.py
notes/: Chess_game_Auto.one  ROS learning.one  Write python with ROS.one
panda_env/: package.xml  setup.cfg  setup.py
panda_env/config/: controllers.yaml
panda_env/description/: manipulator.control.xacro  manipulator.urdf.xacro  panda_arm.xacro  panda_hand copy.xacro  panda_hand.xacro
panda_env/launch/: simulation.launch.py
panda_env/panda_env/: RobotClass.py  easy.py  example_game.py  multi_point_controller.py
panda_env/worlds/: chesset.world
ur_chess_controller/: package.xml  setup.cfg  setup.py
ur_chess_controller/ur_chess_controller/: URClass.py  controller.py  example_game.py  multi_point_controller.py  path_planner.py
ur_env/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ur_env/config/: ur_controllers.yaml
ur_env/launch/: ur_sim_control.launch.py
ur_env/test/: test_gazebo.py
ur_env/worlds/: chesset.world
ur_robot_env/: package.xml  setup.cfg  setup.py
ur_robot_env/config/: gripper_controllers.yaml  robotiq_controllers.yaml
ur_robot_env/launch/: ur_panda_hand.launch.py  ur_sim_control.launch.py
ur_robot_env/ur_robot_env/: URClass.py  example_game.py
ur_robot_env/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_gripper.xacro  simple_gripper.xacro  ur5e_with_gripper.xacro
ur_robot_env/worlds/: chesset.world
(+17 files in other folders)
